# ProbFX-RoadMarkings

./: .gitignore  CHANGELOG.md  Makefile  ProbFX-RoadMarkings  ProbFX-RoadMarkings.cabal  README.md  Setup.hs  benchmark.py  cabal.project  overlay.py  package.yaml  plot.py  setup.sh  stack.yaml
.github/workflows/: haskell.yml
.stack-work/: stack.sqlite3
.stack-work/ghci/3cd18b77/: cabal_macros.h
.stack-work/install/x86_64-linux-tinfo6/31951932e13bee28f16cc7e772dbc5caa966da48287a9efbbe4204c830af24ef/9.0.2/lib/x86_64-linux-ghc-9.0.2/ProbFX-RoadMarkings-0.1.0.0-sSZIlkqhUK43Igefx4g6h/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux-tinfo6/31951932e13bee28f16cc7e772dbc5caa966da48287a9efbbe4204c830af24ef/9.0.2/pkgdb/: ProbFX-RoadMarkings-0.1.0.0-sSZIlkqhUK43Igefx4g6h.conf  package.cache
app/: Main.hs
backend/: CMakeLists.txt  CppFFI.hs  Makefile  README.md
backend/hough/: hough.cc
backend/src/: bindings.cpp  bindings.h  hough.cpp  hough.h  main.cpp  main.h  render.cpp  render.h  shaders.cpp  shaders.h
backend/src/shaders/: diff_frag.glsl  diff_vert.glsl  kmc.computeshader  knn.computeshader  mse.computeshader  out_frag.glsl  scene_frag.glsl  scene_vert.glsl
backend/src/textures/: grass.jpg~  road.jpg~
benchmarks/: results.csv
cpp-src/src/: glad.c
out_images/: results.csv
src/: Benchmark.hs  CMakeLists.txt  CppFFI.hs  Detection.hs  Hough.hs  MyLib.hs  bindings.cpp  bindings.h  glad.c  main.cpp  main.h  shaders.h
src/CppFFI/: CppFFI.hs
src/shaders/: diff_frag.glsl  mse.computeshader  scene_frag.glsl  scene_vert.glsl
src/textures/: rendered_road.jpg~
