cabal-version:      2.4
name:               ProbFX-RoadMarkings
version:            0.1.2.0

synopsis: Road Lane detection using ProbFX
description:
    Using ProbFX for a probabilistic model and OpenGL for rendering this project
    aims to automate the labelling of basic road markings on dashcam images.

-- A URL where users can report bugs.
bug-reports: https://github.com/Functional-Labelling-Lab/ProbFX-RoadMarkings/issues

-- license:
author:             Functional Labelling Lab
maintainer:         bcieslar2001@gmail.com

build-type: Custom 

custom-setup
  setup-depends: base, Cabal, process, directory

extra-source-files:
    backend/src

library
    hs-source-dirs:   backend
    exposed-modules:  CppFFI
    build-depends:    base, c-storable-deriving, containers

    -- Order of libraries is important, reordering will cause linking failures
    extra-libraries: 
        RoadMarkingsBackend, glad, glfw3, GL, dl, m, stdc++fs, pthread, stdc++


executable ProbFX-RoadMarkings
    buildable:        True
    main-is:          Detection.hs
    build-depends:    base, prob-fx, ProbFX-RoadMarkings, fused-effects

    hs-source-dirs:   src
    other-modules:    Hough
    default-language: Haskell2010
