cabal-version:      2.4
name:               ProbFX-RoadMarkings
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             God Emperor
maintainer:         bcieslar2001@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  CppFFI

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base , c-storable-deriving, containers
    hs-source-dirs:   src
    default-language: Haskell2010
    cxx-sources: cpp-src/src/bindings.cpp cpp-src/src/glad.c cpp-src/src/main.cpp cpp-src/src/shaders.cpp
    cxx-options: -lstdc++fs -std=c++17
    extra-libraries:     stdc++, glfw, stdc++fs, X11

executable ProbFX-RoadMarkings
    buildable:        True
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    prob-fx, base, ProbFX-RoadMarkings
    hs-source-dirs:   app
    default-language: Haskell2010
